--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/FoodieDB
-spring.datasource.username=root
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/FoodieDB
+spring.datasource.username=postgres
 spring.datasource.password=Simform@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/FoodieDB
+#spring.datasource.username=root
+#spring.datasource.password=Simform@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.show-sql=true
 
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+
