--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/FoodieDB
 spring.datasource.username=root
-spring.datasource.password=Shai1213@
+spring.datasource.password=Simform@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.show-sql=true
 
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+
+category ="static/image/category"
+item = "static/image/item"
