--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/FoodieDB
 spring.datasource.username=root
-spring.datasource.password=Simform@123
+spring.datasource.password=Shai1213@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.show-sql=true
 
@@ -10,3 +10,7 @@ spring.mvc.view.suffix= .jsp
 
 category ="static/image/category"
 item = "static/image/item"
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=admin
